--- a/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
@@ -8,9 +8,9 @@ spring:
     name: content-api
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/xc_content?serverTimezone=UTC&userUnicode=true&useSSL=false&
+    url: jdbc:mysql://47.103.1.96:3308/xc_content?serverTimezone=UTC&userUnicode=true&useSSL=false&
     username: root
-    password: root
+    password: 123456
 # 日志文件配置路径
 logging:
   config: classpath:log4j2-dev.xml
