--- a/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
@@ -13,6 +13,12 @@
 
         <dependency>
             <groupId>com.xuecheng</groupId>
+            <artifactId>xuecheng-plus-base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xuecheng</groupId>
             <artifactId>xuecheng-plus-content-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
